<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="app_name">Chatter</string>
    <string name="chatter">Chatter</string>
    <string name="login">Login</string>
    <string name="email_address">Email address</string>
    <string name="password">Password</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">Or, login with</string>
    <string name="fullStop">.</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="sign_up">Sign Up</string>
    <string name="already_registered">Already registered?</string>
    <string name="by_signing_up_you_agree_to_our_terms_conditions_and_privacy_policy"><![CDATA[By signing up, you agree to our Terms & Conditions and Privacy Policy]]></string>
    <string name="full_name">Full name</string>
    <string name="welcome">Welcome,</string>
    <string name="name">Name</string>
    <string name="logout">Logout</string>
    <string name="username">Username</string>
    <string name="chats">Chats</string>
    <string name="friends">Friends</string>
    <string name="settings">Settings</string>
    <string name="search">Search</string>
    <string name="topuRayhan">Topu Rayhan</string>
    <string name="topu_cap">TOPU RAYHAN</string>
    <string name="imran_cap">IMRAN SYAM</string>
    <!--suppress AndroidDomInspection -->
    <string name="topuRayhanUsername">@topurayhan007</string>
    <string name="work">App and Web developer</string>
    <string name="search_" tools:ignore="TypographyEllipsis">Search...</string>
    <string name="account_settings">Account Settings</string>
    <string name="confirm">Confirm</string>
    <string name="new_password">New Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="current_password">Current Password</string>
    <string name="security_settings">Security Settings</string>
    <string name="update_profile_photo">Update Profile Picture</string>
    <string name="type_msg" tools:ignore="TypographyEllipsis">Type your message...</string>
    <string name="at_username">topurayhan007</string>
    <string name="_10_15_am">10:15 AM</string>
    <string name="about">A chatting app made by Topu Rayhan and Imran Syam</string>
    <string name="reset_phrase">Enter your email address and we will send you a reset link to reset your password.</string>
</resources>