<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_gravity="center_vertical"
    android:padding="40dp"
    android:background="#000000"
    tools:context=".SignUpActivity">

    <TextView
        android:id="@+id/signupText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:fontFamily="@font/average_sans"
        android:text="@string/sign_up"
        android:textSize="50sp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/name"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.10" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_baseline_person_24"
        android:drawablePadding="10dp"
        android:autofillHints="Full name"
        android:fontFamily="@font/average_sans"
        android:hint="@string/full_name"
        android:inputType="textCapWords"
        android:textColorHint="#87878a"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/signupText"
        app:layout_constraintVertical_bias="0.080"
        tools:ignore="UnusedAttribute" />
    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_at_svg"
        android:drawablePadding="10dp"
        android:autofillHints="Full name"
        android:fontFamily="@font/average_sans"
        android:hint="@string/username"
        android:inputType="textCapWords"
        android:textColorHint="#87878a"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/name"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/name"
        app:layout_constraintTop_toBottomOf="@+id/name"
        app:layout_constraintVertical_bias="0.070"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/emailAddress1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/input_bg"
        android:padding="15dp"
        android:drawableStart="@drawable/ic_baseline_mail_24"
        android:drawablePadding="10dp"
        android:autofillHints="emailAddress"
        android:fontFamily="@font/average_sans"
        android:hint="@string/email_address"
        android:inputType="textEmailAddress"
        android:textColorHint="#87878a"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@id/username"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@id/username"
        app:layout_constraintTop_toBottomOf="@+id/username"
        app:layout_constraintVertical_bias="0.080"
        tools:ignore="UnusedAttribute" />

    <EditText
        android:id="@+id/password1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:autofillHints="password"
        android:padding="13dp"
        android:background="@drawable/input_bg"
        android:drawableStart="@drawable/ic_baseline_lock_24"
        android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
        android:drawablePadding="10dp"
        android:fontFamily="@font/average_sans"
        android:hint="@string/password"
        android:inputType="textPassword"
        android:textColorHint="#87878a"
        android:longClickable="false"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/emailAddress1"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/emailAddress1"
        app:layout_constraintTop_toBottomOf="@+id/emailAddress1"
        app:layout_constraintVertical_bias="0.10"
        tools:ignore="UnusedAttribute" />

    <TextView
        android:id="@+id/terms"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="true"
        android:focusable="true"
        android:textColor="#ffffff"
        android:fontFamily="@font/average_sans"
        android:gravity="center_horizontal"
        android:text="@string/by_signing_up_you_agree_to_our_terms_conditions_and_privacy_policy"
        android:textAlignment="center"
        android:textSize="16sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/password1"
        app:layout_constraintStart_toStartOf="@+id/password1"
        app:layout_constraintTop_toBottomOf="@+id/password1"
        app:layout_constraintVertical_bias="0.090"
        tools:ignore="UnusedAttribute" />

    <Button
        android:id="@+id/signupButton"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/button_bg"
        android:fontFamily="@font/average_sans"
        android:text="@string/sign_up"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:backgroundTint="@null"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/terms"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="@+id/terms"
        app:layout_constraintTop_toBottomOf="@+id/terms"
        app:layout_constraintVertical_bias="0.120"
        tools:ignore="DuplicateSpeakableTextCheck" />

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="@+id/signupButton"
        app:layout_constraintStart_toStartOf="@+id/signupButton"
        app:layout_constraintTop_toBottomOf="@+id/signupButton"
        app:layout_constraintVertical_bias="0.190"
        android:gravity="center">
        <TextView
            android:id="@+id/register"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/average_sans"
            android:text="@string/already_registered"
            android:textSize="16sp"
            android:textStyle="bold"
            android:textColor="@color/white"
            tools:ignore="RtlSymmetry,UnusedAttribute"
            android:paddingEnd="10dp" />

        <TextView
            android:id="@+id/login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/login"
            android:fontFamily="@font/average_sans"
            android:textStyle="bold"
            android:textSize="20sp"
            android:textColor="#e0017a"
            android:clickable="true"
            android:focusable="true"
            tools:ignore="UnusedAttribute" />
    </LinearLayout>




</androidx.constraintlayout.widget.ConstraintLayout>