<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    android:background="#000010"
    tools:context=".SecuritySettingsActivity">

    <View
        android:id="@+id/view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_35"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#e0017a" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:layout_weight="1"
        android:fontFamily="@font/average_sans"
        android:gravity="center_vertical"
        android:text="@string/security_settings"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.5">


        <EditText
            android:id="@+id/currentPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:autofillHints="password"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/average_sans"
            android:hint="@string/current_password"
            android:inputType="textPassword"
            android:longClickable="false"
            android:padding="13dp"
            android:textColorHint="#87878a"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/newPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:autofillHints="password"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/average_sans"
            android:hint="@string/new_password"
            android:inputType="textPassword"
            android:longClickable="false"
            android:padding="13dp"
            android:textColorHint="#87878a"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/confirmPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:autofillHints="password"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_lock_24"
            android:drawableEnd="@drawable/ic_baseline_visibility_off_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/average_sans"
            android:hint="@string/confirm_password"
            android:inputType="textPassword"
            android:longClickable="false"
            android:padding="13dp"
            android:textColorHint="#87878a"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />


        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/average_sans"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>