<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000010"
    tools:context=".AccountSettingsActivity">

    <View
        android:id="@+id/view3"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_35"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#e0017a" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginTop="10dp"
        android:gravity="center_vertical"
        android:fontFamily="@font/average_sans"
        android:text="@string/account_settings"
        android:textSize="25sp"
        android:layout_marginStart="15dp"
        android:textStyle="bold"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintEnd_toStartOf="@+id/editButton"
        app:layout_constraintTop_toTopOf="parent"/>

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/editButton"
        android:layout_width="45dp"
        android:layout_height="45dp"
        android:layout_marginStart="10dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:padding="10dp"
        android:src="@drawable/ic_baseline_edit_24"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/title"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="30dp"
        android:paddingEnd="30dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.5">


        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints="Full name"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_person_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/average_sans"
            android:hint="@string/full_name"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:textColorHint="#87878a"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints="Full name"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_at_svg"
            android:drawablePadding="10dp"
            android:fontFamily="@font/average_sans"
            android:hint="@string/username"
            android:inputType="textCapWords"
            android:padding="15dp"
            android:textColorHint="#87878a"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />

        <EditText
            android:id="@+id/emailAddress1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:autofillHints="emailAddress"
            android:background="@drawable/input_bg"
            android:drawableStart="@drawable/ic_baseline_mail_24"
            android:drawablePadding="10dp"
            android:fontFamily="@font/average_sans"
            android:hint="@string/email_address"
            android:inputType="textEmailAddress"
            android:padding="15dp"
            android:textColorHint="#87878a"
            android:textSize="20sp"
            tools:ignore="UnusedAttribute" />


        <Button
            android:id="@+id/signupButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="256dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/average_sans"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>