<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="#000010"
    tools:context=".UpdateProfilePictureActivity">

    <View
        android:id="@+id/view2"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="10dp"
        android:background="#000000"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <androidx.appcompat.widget.AppCompatImageView
        android:id="@+id/backButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:padding="5dp"
        android:src="@drawable/ic_baseline_arrow_back_35"
        app:layout_constraintBottom_toBottomOf="@+id/title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#e0017a" />

    <TextView
        android:id="@+id/title"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="75dp"
        android:fontFamily="@font/average_sans"
        android:gravity="center_vertical"
        android:text="@string/update_profile_photo"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/backButton"
        app:layout_constraintTop_toTopOf="parent" />


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_vertical"
        android:orientation="vertical"
        android:paddingStart="40dp"
        android:paddingEnd="40dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title"
        app:layout_constraintVertical_bias="0.5">


        <androidx.cardview.widget.CardView
            android:id="@+id/imageView"
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="40dp"
            app:cardCornerRadius="200dp">

            <ImageView
                android:id="@+id/profilePic"
                android:layout_width="200dp"
                android:layout_height="200dp"
                android:contentDescription="TODO"
                android:scaleType="centerCrop"
                android:src="@drawable/avatar"
                tools:ignore="ContentDescription,HardcodedText" />
        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:fontFamily="@font/average_sans"
            android:padding="13dp"
            android:text="@string/topuRayhan"
            android:textAlignment="center"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/uploadPhotoButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:layout_marginBottom="40dp"
            android:background="@drawable/button_bg"
            android:drawableEnd="@drawable/ic_baseline_add_a_photo_24"
            android:fontFamily="@font/average_sans"
            android:text="Upload Photo"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:backgroundTint="@null" />


        <Button
            android:id="@+id/confirmButton"
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:background="@drawable/button_bg"
            android:fontFamily="@font/average_sans"
            android:text="@string/confirm"
            android:textAllCaps="false"
            android:textColor="@color/white"
            android:textSize="25sp"
            android:textStyle="bold"
            app:backgroundTint="@null"
            tools:ignore="DuplicateSpeakableTextCheck" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>